copy and pasted into the main.js from my last github push because what i thought was the whitespace correction on the meditation page did not work the way i thought it would. however, i inspected element and saw that the body padding is what was causing it and created the body declaration within the meditationPage declaration and set the padding to zero on the body and now i think it should be good

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -76,8 +76,10 @@ body {
     width: 100%;
     background-position-x: 50%;
     background-position-y: 50%;
-    padding:0;
   }
+    body{
+    padding:0;
+    }
 
 //play button stays centered min/max width, responsive
 .playButton {
@@ -89,6 +91,7 @@ body {
     display:flex;
     align-items: center;
     justify-content: center;
+    
 }
 
 //.pauseButton {
